# back2school

./: LICENSE  README.md  pyproject.toml
back2school/: LegendaryDragons.py  R3KTigerGenerals.py  __init__.py  _version.py  abililty_scores.py  basic_syntax.py  chromaticdragons.py  d20.py  demon.py  devil.py  directories.py  dragons.py  legendary_dragons.py  legendary_giants.py  loop_tutorials.py  metallicdragons.py  r3k_tiger_generals.py  savings_throws.py
back2school/tests/: test_R3KTigerGenerals.py  test_abililty_scores.py  test_add.py  test_demon.py  test_devil.py  test_directories.py  test_dragons.py  test_legendarydragon.py  test_legendarygiant.py  test_package.py  test_r3k_tiger_generals.py  test_savings_throws.py
back2school/tests/test_data/: README.md
data/: demon_stat_blocks.json  devil_stat_blocks.json  legendary_dragon_stat_blocks.json  legendary_giant_stat_blocks.json  tiger_general_stat_blocks.json
notebooks/: create-stat-block-json.ipynb  demon-devil-json.ipynb  tutorials.ipynb
