[tool.poetry]
name = "back2school"
version = "0.1.0"
description = "Guided lessons on Python using LLMs"
authors = ["Vincent Chang <vincent.chang167@gmail.com> and Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
poetry = "^1.8.2"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
