[tool.poetry]
name = "back2school"
version = "0.2.0"
description = "Guided lessons on Python using LLMs"
authors = ["Vincent Chang <vincent.chang167@gmail.com>", "Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["data/*", "README.md", "back2school/tests/test_data/*"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
poetry = "^1.8.2"
black = "^24.4.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
